# School_Info_Bot

./: .gitignore  alembic.ini  exclude.py  load_data.py  load_data_test.py  pyproject.toml  readme.md  save_log.py  send_msg.py  send_warn.py  test.sql  tlg_bot.py  with_session.py
alembic/: env.py
alembic/versions/: 383b35f8e826_telegram_id_integer.py  572f61f51407_edit_student.py  76085256ce3f_add_meal_excursion_other.py  83a9a0f936ff_log1.py  85383f6cafe3_log_null.py  8dd8083d71bc_final_1_0.py  956813d54c30_add_admin_rkл.py  a2d3551cb32c_modify_students.py  bd3412b1c672_add_delta.py  f0238e063e84_del_balance_delta.py  f663391c9ad2_log.py
models/: __init__.py  all_debtor.py  balance.py  create_debtors.sql  database.py  debtor.py  log.py  mixins.py  student.py
