[tool.poetry]
name = "school_info_bot"
version = "0.1.0"
description = ""
authors = ["Sergey Dubovsky"]

[tool.poetry.dependencies]
python = "^3.8"
gsheetsdb = "^0.1.13"
notifiers = "^1.2.1"
pyparsing = "^2.4.7"
SQLAlchemy = "^1.4.23"
alembic = "^1.7.2"
PyMySQL = "^1.0.2"
pyTelegramBotAPI = "^4.1.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
